tests/transpiler/x/rs/string_in_operator.error
rustc: exit status 1
error: expected one of `)`, `,`, `.`, `?`, or an operator, found keyword `in`
 --> /workspace/mochi/tests/transpiler/x/rs/string_in_operator.rs:4:27
  |
4 |     println!("{}", ("cat" in s));
  |                           ^^ expected one of `)`, `,`, `.`, `?`, or an operator

error: expected one of `)`, `,`, `.`, `?`, or an operator, found keyword `in`
 --> /workspace/mochi/tests/transpiler/x/rs/string_in_operator.rs:5:27
  |
5 |     println!("{}", ("dog" in s));
  |                           ^^ expected one of `)`, `,`, `.`, `?`, or an operator

error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/string_in_operator.rs:3:21
  |
3 |     let s: String = "catch";
  |            ------   ^^^^^^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected `String`, found `&str`
  |            expected due to this

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
