tests/transpiler/x/rs/string_in_operator.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
fn main() {
    let s: String = "catch";
    println!("{}", ("cat" in s));
    println!("{}", ("dog" in s));
}
